hphp/hack/test/typecheck/new_inference/access_error.php.exp
File "access_error.php", line 11, characters 15-22:
Invalid argument (Typing[4110])
File "access_error.php", line 14, characters 22-27:
Expected string
File "access_error.php", line 9, characters 14-14:
But got int
